fixed figcaption overflow in gallery

--- a/project-starter-files/dev/scss/_articles.scss
+++ b/project-starter-files/dev/scss/_articles.scss
@@ -29,14 +29,14 @@
         font-weight: map-get($font-weight, bold);
         text-transform: uppercase;
         color: white;
-        justify-content: right;
-        position: absolute;
-        right: 0;
+        // position: absolute;
+        // right: 0;
     }
 
     img {
         width: 100%;
         margin: 1.5rem 0 0.5rem;
+        margin: 0 auto;
     }
 
 }
