--- a/project-starter-files/dev/scss/_gallery.scss
+++ b/project-starter-files/dev/scss/_gallery.scss
@@ -11,6 +11,7 @@
         // position: relative;
         display: block;
         width: 100%;
+        margin: 0.5rem 0;
     }
 
     figcaption {
@@ -25,7 +26,7 @@
         width: 100%;
         left: 0;
         right: 0;
-        bottom: 0;
+        bottom: 8px;
     }
 
 }
