--- a/project-starter-files/dev/styles/styles.css
+++ b/project-starter-files/dev/styles/styles.css
@@ -48,7 +48,8 @@ table {
     overflow: hidden; }
   .gallery img {
     display: block;
-    width: 100%; }
+    width: 100%;
+    margin: 0.5rem 0; }
   .gallery figcaption {
     padding: 0.5rem;
     background-color: rgba(0, 0, 0, 0.7);
@@ -61,7 +62,7 @@ table {
     width: 100%;
     left: 0;
     right: 0;
-    bottom: 0; }
+    bottom: 8px; }
 
 .section-articles {
   background-color: white;
@@ -86,12 +87,10 @@ table {
     background-color: #185898;
     font-weight: 700;
     text-transform: uppercase;
-    color: white;
-    justify-content: right;
-    position: absolute;
-    right: 0; }
+    color: white; }
   .section-articles img {
     width: 100%;
-    margin: 1.5rem 0 0.5rem; }
+    margin: 1.5rem 0 0.5rem;
+    margin: 0 auto; }
 
 /*# sourceMappingURL=styles.css.map */
